SJB 2012-01-11:
rundaily_riemann_script: always use trunk for platelist.
Turn off platemerge to reduce load on master node; this is
now done in the morning batchmerge job.

SJB 2012-01-10:
PLATELIST: Added /alldirs option to call to get_mjd_dir when using it
to get a list of possible run2d and run1d dirs.  This is required because
of recent change to get_mjd_dir to by default only return numeric subdirs.

-------------------------------------------------------------------------------
v5_6_2 (2012-12-28) Tag for SoS with new offset values for XMID and WAVEMID

MDO 2012-12-18:
combsmallcollimate: change offsets from tests on 12-12 and 12-13 due to temperature and focus ring changes.

ASB 2012-12-17:
SPECTRO_SUMMARY: exclude BAD_TARGET spectra from effective Nspectra count.

SJB 2012-12-17:
PLATEMERGE: gzip spAll*.dat file for faster downloads.  Leave fits file as is.

SJB 2012-12-05:
SPREDUCE1D : allow RUN1D strings which don't match vX_Y_Z.

PLATELIST: Added columns PROGRAMNAME and TILEID to platelist.txt and .html
  --> resolves ticket 1716.
PLATEMERGE: Don't include public bad plates in spAll (e.g. 3698).

-------------------------------------------------------------------------------
v5_6_1 (2012-11-29) Tag for SoS to ignore cart<10 data

SJB 2012-11-29:
bin/reformat_spectra.py: fix COEFF0 keyword when trimming ivar=0 leading
  pixels.  Back propagate by hand into v5_5_12.
bin/copy_spPlan.py : refactor to only copy plans for good plate-mjd
  unless --bad option
BATCHPBS: if topdir option is used to override BOSS_SPECTRO_REDUX,
  put that into the batch script as well.

SJB 2012-11-28:
bin/sos_filesequencer: don't process arc/flat/science for cart<10
  to protect BOSS from MaNGA tests.  Process dark/bias from any cart
  to allow afternoon checkout tests while APOGEE carts are loaded.

-------------------------------------------------------------------------------
v5_6_0 (2012-11-16) Tag to reprocess all data; starts a new season toward DR11
